--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app-list",
   "version": "0.1.0",
+  "homepage": "https://joenior.github.io",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
@@ -24,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "npm run client",
     "server": "node server.js",
     "client": "react-scripts start",
@@ -50,7 +53,8 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "gh-pages": "^6.1.1"
   },
   "proxy": "http://localhost:5000"
 }
