--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "app-list",
   "version": "0.1.0",
-  "homepage": "https://joenior.github.io",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
@@ -12,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/static-build": "^2.5.20",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "react": "^18.3.1",
